# stadium-booking

./: .gitignore  Makefile  TODO  pyproject.toml
apps/: urls.py
apps/stadiums/: filter.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/stadiums/migrations/: 0001_initial.py  0002_initial.py
apps/users/: urls.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  book.py  booking.py  user.py
apps/users/serializers/: __init__.py  booking.py  user.py
apps/users/views/: booking.py  user.py
apps/utils/: permissions.py  validators.py
root/: settings.py  urls.py
